# ASL-project

./: .gitignore  .gitmodules  Makefile  README.md  run-script.sh
c_implementation/: CMakeLists.txt  Makefile  create_csv_timing.py  plot.py
c_implementation/benchmarking/: runtime.c
c_implementation/codegen/: codegen.py
c_implementation/include/: aligned_avx_simulation.h  baseline_simulation.h  blocking_simulation.h  cutoff_trapeze_simulation.h  data_trans_simulation.h  faster_math_simulation.h  fasterfaster_math_simulation.h  preallocated_simulation.h  precomputed_trapeze_simulation.h  quarter_trapeze_macros.h  simulation.h  skewed_simulation.h  subskewed_simulation.h  trapeze_macros.h  trapeze_simulation.h  tsc_x86.h  uskewed_simulation.h  utils.h  vanilla_avx_simulation.h
c_implementation/src/: aligned_avx_simulation.c  baseline_simulation.c  blocking_simulation.c  cutoff_trapeze_simulation.c  data_trans_simulation.c  faster_math_simulation.c  fasterfaster_math_simulation.c  main.c  preallocated_simulation.c  precomputed_trapeze_simulation.c  simulation.c  skewed_simulation.c  subskewed_simulation.c  trapeze_simulation.c  uskewed_simulation.c  utils.c  vanilla_avx_simulation.c
include/: baseline_simulation.h
src/: baseline_simulation.c  main.c
testing_infra/: performance_metrics.csv  plot.py  python_implementation.py  requirements.txt  run-script.sh  skew_heatmap.py  skew_heatmap_rect.py  testing_infra.xsh  timing_plot.py  timing_plot_performance copy.py  timing_plot_performance.py  timing_plot_performance_report.py  timing_plot_runtime.py  timing_plot_runtime_report.py
